--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@tanstack/react-query-devtools": "^5.28.6",
     "date-fns": "^3.6.0",
     "lodash": "^4.17.21",
-    "next": "14.1.4",
+    "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
