--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-intersection-observer": "^9.8.1",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "swiper": "^11.1.0"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.28.6",
