--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.28.6",
     "@tanstack/react-query-devtools": "^5.28.6",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.0.28",
     "lodash": "^4.17.21",
     "next": "^14.1.4",
     "react": "^18",
