--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.51.3",
     "react-intersection-observer": "^9.10.1",
     "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "swiper": "^11.1.0",
     "use-debounce": "^10.0.0"
   },
