add build to workflows

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,12 +1,12 @@
-name: Node.js CI/CD
+name: Deploy to VPS
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
+
   build:
 
     runs-on: ubuntu-latest
@@ -14,17 +14,15 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x, 20.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
+    - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-
     - name: Install dependencies
       run: npm ci
 
@@ -35,17 +33,21 @@ jobs:
       run: npm run build --if-present
 
   deploy:
-    needs: build
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Deploy to production
-      run: |
-        # Add deployment script here
-        # Example:
-        # ssh user@hostname 'bash -s' < deploy.sh
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Deploy code to VPS
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_HOST }} '
+            cd /path/to/your/project &&
+            git pull origin main &&
+            # Additional deployment steps (e.g., build, restart services)
+          '
