comment code in nodejs.yml

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -48,8 +48,8 @@ jobs:
     - name: Deploy code to VPS
       run: |
         ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_HOST }} << EOF
-          cd /root/front-end/Blogging &&
-          git pull origin main &&
+          cd /root/front-end/TP &&
+          git pull origin main && 
           npm install &&
           npm run build &&
           pm2 restart web
