comment code in nodejs.yml

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -49,7 +49,7 @@ jobs:
       run: |
         ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_HOST }} << EOF
 
-          export PATH=$PATH:/usr/local/bin
+          export PATH=$PATH:/root/.nvm/versions/node/v20.14.0/bin
         
           cd /root/front-end/TP &&
           git pull origin main && 
