fix run project after deploy workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -55,5 +55,5 @@ jobs:
           git pull origin main && 
           npm install &&
           npm run build &&
-          pm2 restart web
+          pm2 start --name=web npm -- start
         EOF
