--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,8 +2,9 @@ name: Deploy to VPS
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -53,7 +54,6 @@ jobs:
         
           cd /root/front-end/TP &&
           git pull origin main && 
-          npm install &&
           npm run build &&
-          pm2 start --name=web npm -- start
+          pm2 restart --name=web npm -- start
         EOF
