--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -53,7 +53,11 @@ jobs:
           export PATH=$PATH:/root/.nvm/versions/node/v20.14.0/bin
         
           cd /root/front-end/TP &&
-          git pull origin main && 
+           if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install
+          fi &&
           npm run build &&
           pm2 restart --name=web npm -- start
         EOF
