--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -59,5 +59,5 @@ jobs:
             npm install
           fi &&
           npm run build &&
-          pm2 restart --name=web npm -- start
+          pm2 restart --name=web npm -- run start
         EOF
