--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,7 +51,7 @@ jobs:
           export NVM_DIR="$HOME/.nvm"
           [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
           export PATH=$PATH:$HOME/.nvm/versions/node/v20.14.0/bin
-          cd /root/front-end/Blogging &&
+          cd /root/front-end/TP &&
           git pull origin main &&
           if [ -f package-lock.json ]; then
             npm ci
