--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.1.3",
     "lodash": "^4.17.21",
     "next": "^14.1.4",
+    "next-nprogress-bar": "^2.3.12",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
