--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -52,7 +52,8 @@ jobs:
           [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
           export PATH=$PATH:$HOME/.nvm/versions/node/v20.14.0/bin
           cd /root/front-end/TP &&
-          git pull origin main &&
+          git stash &&
+          git pull origin main --no-rebase &&
           if [ -f package-lock.json ]; then
             npm ci
           else
